force-app/main/default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <label>Application</label>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>