force-app/main/default/objects/Application__c/fields/Placement_Category__c.field-meta.xml
<CustomField>
    <fullName>Placement_Category__c</fullName>
    <label>Placement Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Placed</fullName>
            </value>
            <value>
                <fullName>Not Placed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>