force-app/main/default/objects/Application__c/fields/Student_CGPA__c.field-meta.xml
<CustomField>
    <fullName>Student_CGPA__c</fullName>
    <formula>IF (Student__r.CGPA__c &lt; Job__r.Minimum_CGPA__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student CGPA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>