force-app/main/default/objects/Application__c/fields/Student_Job_Key__c.field-meta.xml
<CustomField>
    <fullName>Student_Job_Key__c</fullName>
    <label>Student Job Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>