force-app/main/default/objects/Application__c/validationRules/CGPA_Requirement_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>CGPA_Requirement_Check</fullName>
    <active>true</active>
    <errorConditionFormula>Student__r.CGPA__c &lt; Job__r.Minimum_CGPA__c</errorConditionFormula>
    <errorMessage>Student CGPA must be greater than or equal to the Job&apos;s minimum CGPA.</errorMessage>
</ValidationRule>